fixed the slider buttons and scrollbars for browsers

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,37 @@
 @tailwind utilities;
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: white black;
+  scroll-behavior: smooth;
+  text-decoration: none;
   list-style-type: none;
+  color: blac;
+}
+
+*::-webkit-scrollbar {
+  width: 1px;
+  height: 1px;
+}
+
+*::-webkit-scrollbar-track {
+  background: black;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 20px;
+  border: 3px solid white;
 }
 
 html,
 body {
   width: 100%;
   height: 100%;
-  scroll-behavior: smooth;
+  background-color: black;
+}
+
+::selection {
+  background: #000;
+  color: #000;
 }
